# cpf

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  LICENSE.TXT  Makefile  README  README.md  config.toml.example
liberty/: .clangd  CMakeLists.txt  Doxyfile  Makefile.common.in  README.md  configure
liberty/autoconf/: configure.bak
liberty/autoconf/autom4te.cache/: output.1  requests
liberty/include/: Metadata.h  typedefs.h
liberty/lib/: CMakeLists.txt  Makefile
liberty/lib/AggrInliner/: CMakeLists.txt  Inliner.cpp  Makefile
liberty/lib/Analysis/: AAvsOracle.cpp  AAvsOracle.h  AcyclicAA.cpp  AcyclicAA.h  AnalysisTimeout.cpp  ArrayOfStructures.cpp  AutoRestrictAA.cpp  BasicLoopAA.cpp  CMakeLists.txt  CallsiteBreadthCombinator.cpp  CallsiteDepthCombinator.cpp  CallsiteDepthCombinator_CtrlSpecAware.cpp  CallsiteSearch.cpp  CallsiteSearch_CtrlSpecAware.cpp  ClassicLoopAA.cpp  ControlSpecIterators.cpp  ControlSpeculation.cpp  Devirtualize.cpp  DisjointFieldAA.cpp  EdgeCountOracleAA.cpp  FieldMallocAA.cpp  FindSource.cpp  FormatStrings.h  GetCallers.cpp  GlobalMallocAA.cpp  IntrinsicAA.cpp  Introspection.cpp  KillFlow.cpp  KillFlow_CtrlSpecAware.cpp  LLVMAAResults.cpp  LocalFun.h  LoopAA.cpp  LoopAAToAA.cpp.del  LoopVariantAllocation.cpp  LoopVariantAllocation.h  Makefile  MultiTypePureFun.h  NoCaptureFcn.cpp  NoCaptureGlobalAA.cpp  NoCaptureSrcAA.cpp  (+24 more)
liberty/lib/CodeGen/: ApplyControlSpeculation.cpp  ApplySeparationSpeculation.cpp  ApplyValuePredictionSpeculation.cpp  CMakeLists.txt  DOALLTransform.cpp  DemoteLiveOutsAndPhis.cpp  MTCG.cpp  MTCGInvocation.cpp  MTCGStudy.cpp  Makefile  ManageHeaps.cpp  Postprocess.cpp  Preprocess.cpp  PrintStage.cpp  RoI.cpp  SpecExec.cpp
liberty/lib/DbgClean/: CMakeLists.txt  DebugClean.cpp  Makefile
liberty/lib/Devirt/: CMakeLists.txt  DevirtualizationAnalysis.cpp  Devirtualize.cpp  Makefile
liberty/lib/Exclusions/: CMakeLists.txt  Exclusions.cpp  Makefile
liberty/lib/ExternICallProm/: CMakeLists.txt  ExternICallProf.cpp  ExternICallProm.cpp
liberty/lib/GraphAlgorithms/: CMakeLists.txt  Ebk.cpp  EbkModule.cpp  EdmondsKarp.cpp  Makefile
liberty/lib/LAMP/: CMakeLists.txt  GimpScript  ISSUES  LAMPLoopSample.cpp  LAMPLoopSample.h  LAMPProfiling.cpp  Makefile  ParserScript  README
liberty/lib/LAMPLoad/: CMakeLists.txt  LAMPLoadProfile.cpp  LampOracleAA.cpp  Makefile
liberty/lib/LoopProf/: .nfs000000000d1c171300000099  .nfs000000000d38d72500000098  .nfs000000000d53437900000097  CMakeLists.txt  LoopProfLoad.cpp  LoopProfiling.cpp  Makefile  TargetLoopHierarchy.cpp  Targets.cpp
liberty/lib/Metadata/: CMakeLists.txt  Makefile  Namer.cpp
liberty/lib/Optimizer/: BipartiteGraph.hpp  optimizer.cpp
liberty/lib/Orchestration/: CMakeLists.txt  CommutativeLibsAA.cpp  CommutativeLibsRemed.cpp  ControlSpecRemed.cpp  CountedIVRemed.cpp  Critic.cpp  DSWPCritic.cpp  EdgeCountOracleAA.cpp  HeaderPhiPredRemed.cpp  LoadedValuePred.cpp  LocalityAA.cpp  LocalityRemed.cpp  LoopFissionRemed.cpp  Makefile  MemSpecAARemed.cpp  MemVerRemed.cpp  Orchestrator.cpp  PSDSWPCritic.cpp  PipelineStrategy.cpp  PointsToAA.cpp  PredSpecRemed.cpp  PredictionSpeculation.cpp  PrivAA.cpp  PrivRemed.cpp  ProfilePerformanceEstimator.cpp  PtrResidueAA.cpp  PtrResidueRemed.cpp  ReadOnlyAA.cpp  ReduxRemed.cpp  Remediator.cpp  ShortLivedAA.cpp  SmtxAA.cpp  SmtxLampRemed.cpp  SmtxSlampRemed.cpp  SpiceRemed.cpp  TXIOAA.cpp  TXIORemed.cpp  TalkdownAA.cpp
liberty/lib/PDG/: Makefile  PDGAnalysis.cpp
liberty/lib/PDGBuilder/: Makefile  PDGBuilder.cpp
liberty/lib/Planner/: CMakeLists.txt  Planner.cpp
liberty/lib/PointsToProfiler/: CMakeLists.txt  Indeterminate.cpp  LLVMMultiTypeFunctions.h  Makefile  Parse.cpp  Pieces.cpp  Profile.cpp  RecognizedExternalFunctions.h  Remat.cpp  profile-api.txt
liberty/lib/Priv/: CMakeLists.txt  Iteration.cpp  IterationPrivatization.h  Makefile
liberty/lib/Redux/: CMakeLists.txt  Makefile  Reduction.cpp  ReductionDetection.cpp
liberty/lib/Repl/: CMakeLists.txt  ReplParse.hpp  repl.cpp
liberty/lib/SLAMP/: CMakeLists.txt  Makefile  MemoryMeasure.cpp  README.md  SLAMP.cpp  SLAMPLoad.cpp  SlampOracleAA.cpp  SlampOracleAA.cpp.bk  queue_benchmark.txt
liberty/lib/SpecPriv/: Api.h  ApplyControlSpeculation.cpp  ApplyControlSpeculation.h  ApplyHeaderPhiPredSpec.cpp  ApplyHeaderPhiPredSpec.h  ApplyPtrResidueSpeculation.cpp  ApplyPtrResidueSpeculation.h  ApplySeparationSpeculation.cpp  ApplySeparationSpeculation.h  ApplySmtxSlampSpeculation.cpp  ApplySmtxSlampSpeculation.h  ApplySmtxSpeculation.cpp  ApplySmtxSpeculation.h  ApplyValuePredictionSpeculation.cpp  ApplyValuePredictionSpeculation.h  Classify.cpp  Classify.h  CommutativeLibsRemed.cpp  ControlSpecRemed.cpp  ControlSpeculator.cpp  Critic.cpp  DAGSCC.cpp  Discriminator.cpp  Discriminator.h  Ebk.h  EbkModule.h  EdmondsKarp.cpp  EdmondsKarp.h  FoldManager.cpp  HeaderPhiLoad.cpp  HeaderPhiPredictionSpeculation.cpp  HeaderPhiPredictionSpeculation.h  HeaderPhiProfiler.cpp  HeapProfile.cpp  HeapProfile.h  HeapProfileLoad.cpp  HeapProfileLoad.h  LocalityAA.cpp  LocalityAA.h  MTCG.cpp  (+50 more)
liberty/lib/Speculation/: CMakeLists.txt  CallsiteDepthCombinator_CtrlSpecAware.cpp  CallsiteSearch_CtrlSpecAware.cpp  Classify.cpp  ControlSpeculator.cpp  Discriminator.cpp  Ebk.cpp  EbkModule.cpp  FoldManager.cpp  HeaderPhiLoad.cpp  HeaderPhiPredictionSpeculation.cpp  HeaderPhiPredictionSpeculation.h  HeaderPhiProfiler.cpp  KillFlow_CtrlSpecAware.cpp  LoopDominators.cpp  Makefile  PDGBuilder.cpp  PointsToAA.cpp  PredictionSpeculator.cpp  Preprocess.cpp  PtrResidueManager.cpp  Read.cpp  Recovery.cpp  RemedSelector.cpp  RemedSelector.h  Selector.cpp  SmtxManager.cpp  SmtxManager.h  SmtxSlampManager.cpp  UpdateOnCloneAdaptors.cpp
liberty/lib/SpiceProf/: ;  CMakeLists.txt  SpiceProfLoad.cpp  SpiceProfiling.cpp
liberty/lib/Strategy/: CMakeLists.txt  Makefile  PerformanceEstimator.cpp  PipelineStrategy.cpp  ProfilePerformanceEstimator.cpp
liberty/lib/Talkdown/: Annotation.cpp  AnnotationParser.cpp  CMakeLists.txt  Makefile  NOTES.md  Node.cpp  Talkdown.cpp  (+2 more)
liberty/support/: CMakeLists.txt  Makefile
(+791 files in other folders)
