add_subdirectory(LAMP)
add_subdirectory(SLAMP)
add_subdirectory(Strategy)
add_subdirectory(Speculation)
add_subdirectory(Orchestration)
add_subdirectory(Utilities)
add_subdirectory(Redux)
add_subdirectory(LoopProf)
add_subdirectory(LAMPLoad)
add_subdirectory(Metadata)
add_subdirectory(Devirt)
add_subdirectory(PointsToProfiler)
add_subdirectory(GraphAlgorithms)
add_subdirectory(AggrInliner)
add_subdirectory(CodeGen)
add_subdirectory(DbgClean)
add_subdirectory(ExternICallProm)
add_subdirectory(Repl)
